objects/SiteContacts_Final_Staging__c.object
<CustomObject>
    <fields>
        <fullName>AOPS_Account_Number__c</fullName>
        <label>AOPS Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOPS_Contact_Number__c</fullName>
        <label>AOPS Contact Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_To_Buy__c</fullName>
        <label>Allowed To Buy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Ship_Contact__c</fullName>
        <label>Default Ship Contact</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_Of_Attempts__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number Of Attempts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipto_Addr_Seq__c</fullName>
        <label>Ship to Address Sequence</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Message__c</fullName>
        <externalId>true</externalId>
        <label>Sync Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Record_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Record ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Site Contacts Final Staging</label>
    <nameField>
        <label>Site Contacts Final Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Contacts Final Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>